--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,8 +8,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
-    <color name="merahindia_500">#CD5C5C</color>
-    <color name="merahindia_700">#CD5C5C</color>
+    <color name="merahindia_500">#BA0000</color>
+    <color name="merahindia_700">#AA2828</color>
     <color name="B">#F57F17</color>
     <color name="A">#2E7D32</color>
     <color name="C">#D32F2F</color>
