--- a/app/src/main/res/layout/fragment_hitung.xml
+++ b/app/src/main/res/layout/fragment_hitung.xml
@@ -47,6 +47,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="number"
+            android:maxLength="3"
             android:layout_margin="16dp"
             android:paddingStart="16dp"
             android:paddingEnd="16dp"
@@ -67,6 +68,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="number"
+            android:maxLength="3"
             android:layout_margin="16dp"
             android:paddingStart="16dp"
             android:paddingEnd="16dp"
@@ -87,6 +89,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="number"
+            android:maxLength="3"
             android:layout_margin="16dp"
             android:paddingStart="16dp"
             android:paddingEnd="16dp"
@@ -107,6 +110,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="number"
+            android:maxLength="3"
             android:layout_margin="16dp"
             android:paddingStart="16dp"
             android:paddingEnd="16dp"
